--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -24,6 +24,7 @@
     "blo": "~1.2.0",
     "burner-connector": "0.0.9",
     "daisyui": "4.12.10",
+    "excalibur": "^0.30.3",
     "kubo-rpc-client": "~5.0.2",
     "next": "~14.2.11",
     "next-nprogress-bar": "~2.3.13",
