--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=20.18.3"
+  },
+  "dependencies": {
+    "excalibur": "^0.30.3"
   }
 }
