--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -35,7 +35,7 @@
     "react-dom": "~18.3.1",
     "react-hot-toast": "~2.4.0",
     "usehooks-ts": "~3.1.0",
-    "viem": "2.23.0",
+    "viem": "^2.23.10",
     "wagmi": "2.14.11",
     "zustand": "~5.0.0"
   },
