--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@zerodev/sdk": "^5.4.26",
     "ethers": "^6.13.5",
     "excalibur": "^0.30.3",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "viem": "^2.23.10"
   },
   "packageManager": "yarn@3.2.3",
