fix smart acc generation, states

--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -43,11 +43,13 @@
     "@types/qrcode": "~1.5.5",
     "@typescript-eslint/eslint-plugin": "~8.8.1",
     "@typescript-eslint/parser": "~8.8.1",
+    "axios": "^0.21.4",
     "chai": "~4.5.0",
     "eslint": "~8.57.1",
     "eslint-config-prettier": "~8.10.0",
     "eslint-plugin-prettier": "~5.2.1",
     "ethers": "~6.13.2",
+    "form-data": "^4.0.2",
     "hardhat": "~2.22.10",
     "hardhat-deploy": "~0.12.4",
     "hardhat-deploy-ethers": "~0.4.2",
